WIP - Configuration Avoidance Discovery - Add in found jvm args intellij looks to be instantiating